@@ -9,7 +9,7 @@ import java.util.stream.Collectors;
 public class ListOperations {
     /*1*/
     public static int sumOfEvenNumbers(List<Integer> numbers) {
-        chekNumbers(numbers);
+        checkNumbers(numbers);
         return numbers.stream()
                 .filter(y -> y % 2 == 0)
                 .mapToInt(Integer::intValue)
@@ -18,7 +18,7 @@ public class ListOperations {
 
     /*2*/
     public static int maxNumbers(List<Integer> numbers) {
-        chekNumbers(numbers);
+        checkNumbers(numbers);
         return numbers.stream()
                 .max(Integer::compareTo)
                 .orElse(0);
@@ -26,9 +26,9 @@ public class ListOperations {
 
     /*3*/
     public static double findAverage(List<Integer> numbers) {
-        chekNumbers(numbers);
+        checkNumbers(numbers);
         return numbers.stream()
-                .mapToDouble((i -> i))
+                .mapToDouble(Integer::doubleValue)
                 .average()
                 .orElse(0.0);
     }
@@ -44,7 +44,6 @@ public class ListOperations {
     /*5*/
     public static List<String> filterStringsBySubstring(List<String> strings,
                                                         String substring) {
-        chekStrings(strings);
         if (substring.length() <= 1 || (substring.isBlank())) {
             throw new IllegalArgumentException("ведите подстроку");
         }
@@ -58,11 +57,11 @@ public class ListOperations {
         chekStrings(strings);
         return strings.stream()
                 .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /*6.1*/
-    public static List<String> sortByLength1(List<String> strings) {
+    public static List<String> sortByLengthReversed(List<String> strings) {
         chekStrings(strings);
         return strings.stream()
                 .sorted(Comparator.reverseOrder())
@@ -72,7 +71,7 @@ public class ListOperations {
     /*7*/
     public static boolean allMatchConditionList(
             List<Integer> numbers, Predicate<Integer> predicate) {
-        chekNumbers(numbers);
+        checkNumbers(numbers);
         return numbers.stream()
                 .allMatch(predicate);
     }
@@ -80,7 +79,7 @@ public class ListOperations {
     /*8*/
     public static int findMinGreaterThan(
             List<Integer> numbers, int threshold) {
-        chekNumbers(numbers);
+        checkNumbers(numbers);
         return numbers.stream()
                 .filter(x -> x > threshold)
                 .min(Integer::compareTo)
@@ -101,7 +100,7 @@ public class ListOperations {
         }
     }
 
-    public static void chekNumbers(List<Integer> numbers) {
+    public static void checkNumbers(List<Integer> numbers) {
         if (numbers == null || numbers.isEmpty()) {
             throw new IllegalArgumentException("Список не может быть пустым или null");
         }
